--- a/src/Server/Server.csproj
+++ b/src/Server/Server.csproj
@@ -27,4 +27,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="wwwroot\themes\darkly\" />
+	</ItemGroup>
+
 </Project>
