--- a/src/ViewModels/ViewModels.csproj
+++ b/src/ViewModels/ViewModels.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 	  <None Remove="Pages\Features\Cms\Admin\Pages\CreateViewModel.cs~RF910e395.TMP" />
+	  <None Remove="Pages\Features\Cms\CategoryViewModel.cs~RF98ffaad.TMP" />
 	</ItemGroup>
 
 	<ItemGroup>
