--- a/src/Server/Server.csproj
+++ b/src/Server/Server.csproj
@@ -28,6 +28,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Pages\Admin\" />
 	  <Folder Include="wwwroot\themes\darkly\" />
 	</ItemGroup>
 
