--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,63 @@ FodyWeavers.xsd
 /src/Server/Database/MySQLite.db
 /src/Server/Database/MySQLite.db-shm
 /src/Server/Database/MySQLite.db-wal
+/src/Server/wwwroot/images/predefined_posts/post_9.png
+/src/Server/wwwroot/images/predefined_posts/post_8.png
+/src/Server/wwwroot/images/predefined_posts/post_7.png
+/src/Server/wwwroot/images/predefined_posts/post_6.png
+/src/Server/wwwroot/images/predefined_posts/post_5.png
+/src/Server/wwwroot/images/predefined_posts/post_4.png
+/src/Server/wwwroot/images/predefined_posts/post_3.png
+/src/Server/wwwroot/images/predefined_posts/post_29.png
+/src/Server/wwwroot/images/predefined_posts/post_28.png
+/src/Server/wwwroot/images/predefined_posts/post_27.png
+/src/Server/wwwroot/images/predefined_posts/post_26.png
+/src/Server/wwwroot/images/predefined_posts/post_25.png
+/src/Server/wwwroot/images/predefined_posts/post_24.png
+/src/Server/wwwroot/images/predefined_posts/post_23.png
+/src/Server/wwwroot/images/predefined_posts/post_22.png
+/src/Server/wwwroot/images/predefined_posts/post_21.png
+/src/Server/wwwroot/images/predefined_posts/post_20.png
+/src/Server/wwwroot/images/predefined_posts/post_2.png
+/src/Server/wwwroot/images/predefined_posts/post_19.png
+/src/Server/wwwroot/images/predefined_posts/post_18.png
+/src/Server/wwwroot/images/predefined_posts/post_17.png
+/src/Server/wwwroot/images/predefined_posts/post_16.png
+/src/Server/wwwroot/images/predefined_posts/post_15.png
+/src/Server/wwwroot/images/predefined_posts/post_14.png
+/src/Server/wwwroot/images/predefined_posts/post_13.png
+/src/Server/wwwroot/images/predefined_posts/post_12.png
+/src/Server/wwwroot/images/predefined_posts/post_11.png
+/src/Server/wwwroot/images/predefined_posts/post_10.png
+/src/Server/wwwroot/images/predefined_posts/post_1.png
+/src/Server/wwwroot/images/predefined_posts/post_0.png
+/src/Server/wwwroot/images/predefined_slides/slide_9.png
+/src/Server/wwwroot/images/predefined_slides/slide_8.png
+/src/Server/wwwroot/images/predefined_slides/slide_7.png
+/src/Server/wwwroot/images/predefined_slides/slide_6.png
+/src/Server/wwwroot/images/predefined_slides/slide_5.png
+/src/Server/wwwroot/images/predefined_slides/slide_4.png
+/src/Server/wwwroot/images/predefined_slides/slide_3.png
+/src/Server/wwwroot/images/predefined_slides/slide_29.png
+/src/Server/wwwroot/images/predefined_slides/slide_28.png
+/src/Server/wwwroot/images/predefined_slides/slide_27.png
+/src/Server/wwwroot/images/predefined_slides/slide_26.png
+/src/Server/wwwroot/images/predefined_slides/slide_25.png
+/src/Server/wwwroot/images/predefined_slides/slide_24.png
+/src/Server/wwwroot/images/predefined_slides/slide_23.png
+/src/Server/wwwroot/images/predefined_slides/slide_22.png
+/src/Server/wwwroot/images/predefined_slides/slide_21.png
+/src/Server/wwwroot/images/predefined_slides/slide_20.png
+/src/Server/wwwroot/images/predefined_slides/slide_2.png
+/src/Server/wwwroot/images/predefined_slides/slide_19.png
+/src/Server/wwwroot/images/predefined_slides/slide_18.png
+/src/Server/wwwroot/images/predefined_slides/slide_17.png
+/src/Server/wwwroot/images/predefined_slides/slide_16.png
+/src/Server/wwwroot/images/predefined_slides/slide_15.png
+/src/Server/wwwroot/images/predefined_slides/slide_14.png
+/src/Server/wwwroot/images/predefined_slides/slide_13.png
+/src/Server/wwwroot/images/predefined_slides/slide_12.png
+/src/Server/wwwroot/images/predefined_slides/slide_11.png
+/src/Server/wwwroot/images/predefined_slides/slide_10.png
+/src/Server/wwwroot/images/predefined_slides/slide_1.png
+/src/Server/wwwroot/images/predefined_slides/slide_0.png
