--- a/src/Server/appsettings.Development.json
+++ b/src/Server/appsettings.Development.json
@@ -31,8 +31,8 @@
 			"TableHeaderStyle": "table-primary",
 			"TableFooterStyle": "table-secondary",
 			"TableStyle": "table table-bordered table-sm table-striped table-hover",
-			"PictureExtensions": [ ".ico", ".png", ".jpg", ".jpeg", ".bmp", ".gif" ],
-			"PermittedFileExtensions": [ ".ico", ".png", ".jpg", ".jpeg", ".bmp", ".gif", ".mp3", ".mp4", ".pdf", ".zip", ".rar", ".doc", ".docx", ".txt", ".bak" ],
+			"PictureExtensions": [ ".ico", ".png", ".jpg", ".jpeg", ".bmp", ".gif", ".svg" ],
+			"PermittedFileExtensions": [ ".ico", ".png", ".jpg", ".jpeg", ".bmp", ".gif", ".mp3", ".mp4", ".pdf", ".zip", ".rar", ".doc", ".docx", ".txt", ".bak" ]
 		},
 		"TablesDefaultSettings": {
 			"NoIcon": "bi bi-x",
