--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -32,7 +32,7 @@
 			"TableHeaderStyle": "table-primary",
 			"TableFooterStyle": "table-secondary",
 			"TableStyle": "table table-bordered table-sm table-striped table-hover",
-			"PictureExtensions": [ ".ico", ".png", ".jpg", ".jpeg", ".bmp", ".gif" ],
+			"PictureExtensions": [ ".ico", ".png", ".jpg", ".jpeg", ".bmp", ".gif", ".svg" ],
 			"PermittedFileExtensions": [ ".ico", ".png", ".jpg", ".jpeg", ".bmp", ".gif", ".mp3", ".mp4", ".pdf", ".zip", ".rar", ".doc", ".docx", ".txt", ".bak" ]
 		},
 		"TablesDefaultSettings": {
