--- a/src/Server/Server.csproj
+++ b/src/Server/Server.csproj
@@ -15,6 +15,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Domain\Domain.csproj" />
 		<ProjectReference Include="..\Constants\Constants.csproj" />
+		<ProjectReference Include="..\Framework\Dtat.Net.Mail\Dtat.Net.Mail.csproj" />
 		<ProjectReference Include="..\Framework\Dtat\Dtat.csproj" />
 		<ProjectReference Include="..\Resources\Resources.csproj" />
 		<ProjectReference Include="..\ViewModels\ViewModels.csproj" />
